# draft_server

./: pyproject.toml
draft_server/ygo_draft/: manage.py
draft_server/ygo_draft/first_drafter/: apps.py  models.py  serializer.py  views.py
draft_server/ygo_draft/ygo_draft/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_draft_server.py
